--- a/pages/page1.html
+++ b/pages/page1.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset="utf-8">
     <title>page1</title>
+    <link rel="stylesheet" href="../Styles/main.css">
   </head>
   <body>
     <nav>
+      
       <ul>
         <li><a href="../index.html">inicio</a></li>
         <li><a href="">pagina 1</a></li>
@@ -18,8 +20,17 @@
       </ul>
 
     </nav>
-    <h1>pagina uno</h1>
-    <img src="../assets/super.jpg" alt="">
+      <h1>pagina uno</h1>
+
+        <article class="con1">
+          <article class="con2">
+          </article>
+          <article class="con3">
+          </article>
+          <article class="con4">
+
+          </article>
+        </article>
 
 
   </body>
