--- a/pages/page2.html
+++ b/pages/page2.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>page2</title>
+    <link rel="stylesheet" href="../Styles/main.css">
   </head>
   <body>
     <nav>
@@ -19,7 +20,22 @@
 
     </nav>
     <h1>pagina 2</h1>
-    <img src="../assets/freee.png" alt="">
+    <article class="container1">
+      <article class="cont1">
+        <article class="conte1">
+        </article>
+        <article class="conte2">
+        </article>
+        <article class="cont2">
+          <article class="peque1">
+          </article>
+        </article>
+      </article>
+      <article class="cont3">
+
+      </article>
+
+    </article>
 
 
   </body>
