--- a/pages/page4.html
+++ b/pages/page4.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>page4</title>
+    <link rel="stylesheet" href="../Styles/main.css">
   </head>
   <body>
     <nav>
@@ -19,7 +20,32 @@
 
     </nav>
     <h1>pagina 4</h1>
-    <img src="../assets/niña.png" alt="">
+    <article class="page40">
+      <article class="page20">
+        <article class="holaa">
+          <article class="code10">
+            <article class="code20">
+              <article class="code30">
+
+              </article>
+
+            </article>
+
+          </article>
+          <article class="codex">
+            <article class="codex1">
+              <article class="codex2">
+
+              </article>
+
+            </article>
+
+          </article>
+        </article>
+      </article>
+
+
+    </article>
 
 
   </body>
