--- a/pages/page3.html
+++ b/pages/page3.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>page1</title>
+    <link rel="stylesheet" href="../Styles/main.css">
   </head>
   <body>
     <nav>
@@ -19,7 +20,31 @@
 
     </nav>
     <h1>pagina 3</h1>
-    <img src="../assets/dragon.jpg" alt="">
+    <article class="todo">
+      <article class="primera">
+      </article>
+      <article class="segunda">
+        <article class="pri1">
+        </article>
+        <article class="dos">
+        </article>
+      </article>
+      <article class="tres">
+        <article class="tles">
+          <article class="doss">
+            <article class="unoo">
+
+              </article>
+
+            </article>
+
+          </article>
+
+        </article>
+
+      </article>
+
+  </article>
 
 
   </body>
